# pyllamma.cpp

./: .gitignore  CMakeLists.txt  llama.cpp  llama.h  main.cpp  module.cpp  pyllamacpp.py  test.py
module/: CMakeLists.txt  module.cpp  pyllamacpp.py
module/include/: embeddings.hpp  tokens.hpp
module/src/: converters.cpp  embeddings.cpp  tokens.cpp
pyllamacpp/: __init__.py  __main__.py  indicators.py  logs.py  model_inteface.py  models.json  models.py  pyllamacpp.py
pyllamacpp/model_interfaces/: pyllamacpp.py  test.py
pyllamacpp/splash/: splash.py  splash.txt
